test_programs/compile_failure/noirc_frontend_tests_turbofish_use_generic_type_alias_with_partial_generics_with_turbofish_in_method_call_errors_first_type/src/main.nr

        pub struct Foo<T, U> {
            x: T,
            y: U,
        }

        impl<T, U> Foo<T, U> {
            fn new(x: T, y: U) -> Self {
                Foo { x, y }
            }
        }

        type Bar<T> = Foo<T, i32>;

        fn main() {
            let _ = Bar::<bool>::new(1, 1);
        }
    